[package]
edition = "2021"
name = "pan-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "blocking", "multipart"]}
tokio = {version = "1", features = ["full"]}
## json
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1.0"}
form_urlencoded = "1.0.1"

md5 = "0.7.0"
