[package]
edition = "2021"
name = "pan-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.7", features = ["json", "blocking", "multipart"]}
tokio = {version = "1.40.0", features = ["full"]}
## json
serde = {version = "1.0.210", features = ["derive"]}
serde_json = {version = "1.0.128"}
form_urlencoded = "1.2.1"

md5 = "0.7.0"
